--- a/Forum/Pages/Thread.razor
+++ b/Forum/Pages/Thread.razor
@@ -71,6 +71,8 @@
 			<h5>@_thread.Forum.Name</h5>
 			<p class="p-annotation-sm">@_thread.Forum.Members.Count Mem. / Created @_thread.Forum.Created.ToString("d")</p>
 			<pre class="txt-title">@_thread.Forum.Description</pre>
+			@{ var followText = _followsForum ? "Unfollow" : "Follow"; }
+			<button class="btn-norm" style="width: 100%" @onclick="FollowForum">@followText</button>
 		</div>
 	</div>
 }
@@ -99,6 +101,7 @@ else
 	private string _copyLabel = "Copy Link";
 	private string _content;
 	private bool _saved;
+	private bool _followsForum;
 
 	protected override async Task OnInitializedAsync()
 	{
@@ -134,10 +137,13 @@ else
 			}
 		}
 
-		var user = DbContext.Users.Include(u => u.SavedThreads)
+		var user = DbContext.Users
+			.Include(u => u.SavedThreads)
+			.Include(u => u.Forums)
 			.First(u => u.AccountName == _authState.User.Identity.Name);
 
 		_saved = user.SavedThreads.Contains(_thread);
+		_followsForum = user.Forums.Contains(_thread.Forum);
 	}
 
 	private void NavHome()
@@ -173,6 +179,26 @@ else
 		await DbContext.SaveChangesAsync();
 
 		StateHasChanged();
+	}
+
+	private void FollowForum()
+	{
+		var user = DbContext.Users
+			.Include(u => u.Forums)
+			.First(u => u.AccountName == _authState.User.Identity.Name);
+
+		if (_followsForum)
+		{
+			user.Forums.Remove(_thread.Forum);
+			_followsForum = false;
+		}
+		else
+		{
+			user.Forums.Add(_thread.Forum);
+			_followsForum = true;
+		}
+
+		DbContext.SaveChanges();
 	}
 
 	private async void Delete()
