--- a/Forum/wwwroot/css/site.css
+++ b/Forum/wwwroot/css/site.css
@@ -2,7 +2,7 @@
 
 html, body {
 	/*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
-	font-family: Roboto;
+	font-family: Roboto, monospace;
 	background: #191B22;
 	color: #FFF;
 
